--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     background-color: whitesmoke;
-    margin: 0px;
+    /*margin: 0px;*/
 }
 .navbar{
     background-color: #222;
@@ -10,7 +10,7 @@ body{
     color: #fff;
 }
 .navbar-brand:hover{
-    color: #fec503;
+    color: rgb(137, 23, 230);
 }
 .nav-item a {
 	font-family: 
@@ -19,13 +19,13 @@ body{
 	color:#fff
 }
 .nav-item a:hover{
-    color: #fec503;
+    color: rgb(137, 23, 230);
 }
-.navbar-toggler-icon{
+.navbar .navbar-toggler .navbar-toggler-icon{
     color: #fff;
 }
 .navbar-toggler-icon:hover{
-    color: #fec503;
+    color: rgb(137, 23, 230);
 }
 
 header{
@@ -37,9 +37,17 @@ header{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 100px 80px;
-
+    width: 100%;
+    height: 100%;
+    position: absolute; 
+    top:0;
+    left: 0;
+    z-index: -1;
     
+}
+section{
+    padding: 0;
+    box-sizing: border-box;
 }
 .container{
     min-height: 100vh;
@@ -60,8 +68,33 @@ section.work{
     align-items: center;
     padding: 100px 80px;
 }
+.work .foto li{
+    padding: 10px;
+    text-align: center;
+    flex-basis: 50%;
+}
+.work img{
+    width: 100%;
+
+}
+@media (max-width: 768px){
+    .work .foto li{
+        padding: 40px;
+
+    }
+}
+
 
 footer {
-    padding: 30px;
-    background-color: #000;    
+    padding: 30px 0;
+    background-color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;   
+}
+footer p{
+    text-transform: uppercase;
+    font-size: 18px;
+    align-self: center;
+
 }
