--- a/style.css
+++ b/style.css
@@ -27,34 +27,38 @@ body{
 .navbar-toggler-icon:hover{
     color: rgb(137, 23, 230);
 }
+.fa{
+    color: white;
+}
 
 header{
-    background-image: url(./img/2696888.jpg);
-    background-position: center;
-    background-size: cover;
     text-align: center;
     color: #fff;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
+    height: 300px;
+    position: relative;
+}
+.header-container{
+    background-image: url(./img/2696888.jpg);
+    background-position: center;
+    background-size: cover;
+    width: 100%;
     height: 100%;
     position: absolute; 
     top:0;
     left: 0;
-    z-index: -1;
-    
 }
 section{
     padding: 0;
     box-sizing: border-box;
 }
 .container{
-    min-height: 100vh;
     justify-content: center;
     text-align: center;
     position: relative;
-
 }
 
 /*portfolio*/
